# ncurses-st-menu

./: .gitignore  Makefile  README.md  aclocal.m4  config.make  config.make.in  configure  configure.ac  demo-st-menu.c  demo.c  demo2.c  simple.c  st_menu.c  st_menu.h  st_menu.pc  st_menu.pc.in  st_menu_styles.c  unicode.c  unicode.h
demo/: demo.c  simple.c  simple2.c
doc/: API.md
include/: st_curses.h  st_menu.h  st_panel.h
src/: st_menu.c  st_menu_styles.c  unicode.c
tools/: ax_pdcurses.m4  config.rpath
